--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dev-dependencies": "^1.0.0",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.6.3",
     "mysql8": "^2.17.3",
     "nanoid": "^3.3.6",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.35.1",
+    "waterline": "^0.15.2"
   }
 }
